# Solaris

./: Cargo.toml  config.yaml.dist  start_local_influxdb.sh
.github/workflows/: github-actions.yml
docs/: solaris.excalidraw
mappings/: sungrow.yaml
src/: app_config.rs  convert.rs  influxdb2_client.rs  inverter_config.rs  main.rs  modbus_client.rs
