[package]
name = "solaris"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ascii_converter = "0.3"
async-trait = "0.1"
convert_case = "0.6"
futures = "0.3"
hex = "0.4"
influxdb2 = "0.3"
modbus = "1"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
tokio = { version = "1.24", features = ["full"] }
log = "0.4"
env_logger = "0.10"